--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-523.1KB/s(Youtube:不良林), server: fef84889-39c1-4952-9e66-2556320f9ad5.us.game.node.touhou.place, port: 46440, type: ss, cipher: aes-256-gcm, password: QJT6vziwFcubUMWY}
-  - {name: 🇨🇳 中国-7.05MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.40MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.75MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.49MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-162.7KB/s(Youtube:不良林), server: f7d56ad5-e143-4f6e-ae6e-106dc2cc61f9.hk.game.node.touhou.place, port: 46440, type: ss, cipher: aes-256-gcm, password: QJT6vziwFcubUMWY}
-  - {name: 🇷🇺 俄罗斯联邦-337.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇷🇺 俄罗斯联邦-346.0KB/s(Youtube:不良林), server: 213.183.53.177, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇨🇳 台湾-679.0KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-482.1KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-6.58MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: c3c448da2363a6f7, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.00MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.12MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-282.0KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-392.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 乌克兰-639.7KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇺🇸 美国-2.86MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇯🇵 日本-4.77MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇺🇸 美国-466.4KB/s(Youtube:不良林), server: 43.200.6.115, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇰🇷 韩国-2.90MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-162.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-337.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-346.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-679.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-282.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-392.1KB/s(Youtube:不良林)
+      - 乌克兰-639.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.90MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-162.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-337.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-346.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-679.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-282.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-392.1KB/s(Youtube:不良林)
+      - 乌克兰-639.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.90MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-162.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-337.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-346.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-679.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-282.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-392.1KB/s(Youtube:不良林)
+      - 乌克兰-639.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.90MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-679.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-282.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-162.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-337.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-346.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-679.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-282.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-392.1KB/s(Youtube:不良林)
+      - 乌克兰-639.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.90MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-162.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-337.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-346.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-679.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-282.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-392.1KB/s(Youtube:不良林)
+      - 乌克兰-639.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.90MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-162.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-337.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-346.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-679.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-282.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-392.1KB/s(Youtube:不良林)
+      - 乌克兰-639.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.90MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-162.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-337.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-346.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-679.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-282.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-392.1KB/s(Youtube:不良林)
+      - 乌克兰-639.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-466.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.90MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
