--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-478.0KB/s(Youtube:不良林), server: 213.183.53.177, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇦🇺 澳大利亚-1.72MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.95MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-14.09MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-581.2KB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇭🇰 香港-3.96MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇫🇷 法国-2.21MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇯🇵 日本-835.1KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-3.54MB/s(Youtube:不良林), server: 3.35.207.65, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-8.03MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.52MB/s(Youtube:不良林), server: 129.226.215.95, port: 43613, type: vmess, uuid: 9e1be3ad-911d-4dcc-822f-f8f8e79f62e2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-664.5KB/s(Youtube:不良林), server: 34.215.130.186, port: 10089, type: vmess, uuid: 3608c9dc-1eeb-48b0-b570-43074b4a0c9e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 34.215.130.186}}
+  - {name: 🇩🇪 德国-223.1KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-804.7KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.45MB/s(Youtube:不良林), server: 129.226.94.27, port: 23785, type: vmess, uuid: d0771055-cccc-4b79-c4db-d2942f8c9e62, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.49MB/s(Youtube:不良林), server: 129.226.217.71, port: 24000, type: vmess, uuid: 8155e01b-1b54-410d-9550-555390a90d9d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.14MB/s(Youtube:不良林), server: 129.226.214.28, port: 15430, type: vmess, uuid: 6e9a4ae9-e60b-4cea-af9f-9de18d37404e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-421.7KB/s(Youtube:不良林), server: 129.226.95.143, port: 45381, type: vmess, uuid: cd2a260c-f244-4e12-83c3-8a259cf29fc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-465.8KB/s(Youtube:不良林), server: 103.172.116.87, port: 31244, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-478.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-581.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-835.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-804.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-465.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-478.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-581.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-835.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-804.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-465.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-478.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-581.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-835.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-804.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-465.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-478.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-581.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-835.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-804.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-465.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-478.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-581.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-835.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-804.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-465.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-478.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-581.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-835.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-804.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-465.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-478.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-581.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-835.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-804.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-465.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
