--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.03MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.52MB/s(Youtube:不良林), server: 129.226.215.95, port: 43613, type: vmess, uuid: 9e1be3ad-911d-4dcc-822f-f8f8e79f62e2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-664.5KB/s(Youtube:不良林), server: 34.215.130.186, port: 10089, type: vmess, uuid: 3608c9dc-1eeb-48b0-b570-43074b4a0c9e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 34.215.130.186}}
-  - {name: 🇩🇪 德国-223.1KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-804.7KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.45MB/s(Youtube:不良林), server: 129.226.94.27, port: 23785, type: vmess, uuid: d0771055-cccc-4b79-c4db-d2942f8c9e62, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.49MB/s(Youtube:不良林), server: 129.226.217.71, port: 24000, type: vmess, uuid: 8155e01b-1b54-410d-9550-555390a90d9d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.14MB/s(Youtube:不良林), server: 129.226.214.28, port: 15430, type: vmess, uuid: 6e9a4ae9-e60b-4cea-af9f-9de18d37404e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-421.7KB/s(Youtube:不良林), server: 129.226.95.143, port: 45381, type: vmess, uuid: cd2a260c-f244-4e12-83c3-8a259cf29fc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-465.8KB/s(Youtube:不良林), server: 103.172.116.87, port: 31244, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-956.4KB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-303.6KB/s(Youtube:不良林), server: 129.226.93.47, port: 54592, type: vmess, uuid: 5b1e77bf-a73c-4756-e64a-4f02ac35ed43, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林), server: 213.183.53.177, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇸🇬 新加坡-165.9KB/s(Youtube:不良林), server: 129.226.95.108, port: 58681, type: vmess, uuid: 758c6c64-e7bc-4bbf-dd58-cbd21c09c75a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.86MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇷🇺 俄罗斯联邦-6.07MB/s(Youtube:不良林), server: 213.183.53.177, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇳🇱 荷兰-1.81MB/s(Youtube:不良林), server: 213.183.59.214, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: 129.150.61.170, port: 29493, type: vmess, uuid: ac0d0076-93d2-48ad-ba6e-ea5c8d7b0132, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.150.61.170}}
+  - {name: 🇸🇬 新加坡-2.40MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.38MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-223.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-804.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-465.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-956.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-165.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-6.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.38MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-223.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-804.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-465.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-956.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-165.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-6.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.38MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-223.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-804.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-465.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-956.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-165.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-6.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.38MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-223.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-804.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-465.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-956.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-165.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-6.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.38MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-223.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-804.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-465.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-956.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-165.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-6.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.38MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-223.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-804.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-465.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-956.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-165.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-6.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.38MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-664.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-223.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-804.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-465.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-956.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-165.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-6.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.38MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
